--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # API Configuration
 # Replace with your actual backend API URL
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3001/api
+NEXT_PUBLIC_API_BASE_URL=medika_pretest.localhost
 
 # Development settings
 NODE_ENV=development
+CLIENT_ID=Aptt8Gz77Jc-R4x6wEMgF6z2VindtgAONBp4UsTDvOc
+CLIENT_SECRET=my885L3cwCVms_d1oWg3h8NPb6wftuBUF9lIga5QuA8
 
 # Optional: Add other environment variables as needed
 # DATABASE_URL=postgresql://username:password@localhost:5432/library_db
